@@ -27,6 +27,7 @@
                     <target>19</target>
                     <enablePreview>true</enablePreview>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
